# en_audio2text

./: DESCRIPTION.txt  README.md  TODOS.txt  pyproject.toml  setup.cfg  setup.py
dev_test/: DevSpeech2Text.ipynb
en_audio2text/: aud2text.py
tests/: Untitled.ipynb  test_nb_1.ipynb
