[metadata]
# replace with your username:
name = en_audio2text-soumyade
version = 1.0.0
author = Soumya De
author_email = cs.soumyade@gmail.com
description = small wrapper around speech recognition package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cssoumyade/en_audio2text
project_urls =
    Bug Tracker = https://github.com/cssoumyade/en_audio2text/issues
classifiers =
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Other Audience
        Topic :: Education :: Testing
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src


